<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<bundle.symbolicName>org.cytoscape.mcode</bundle.symbolicName>
		<bundle.namespace>ca.utoronto.tdccbr.mcode.internal</bundle.namespace>
		<cytoscape.api.version>3.8.0</cytoscape.api.version>
		<cytoscape.impl.version>3.8.0</cytoscape.impl.version>
		<maven.build.timestamp.format>MMMM yyyy</maven.build.timestamp.format>
		<buildDate>${maven.build.timestamp}</buildDate>
	</properties>

	<groupId>org.cytoscape.mcode</groupId>
	<artifactId>mcode-app</artifactId>
	<name>MCODE</name>
	<packaging>bundle</packaging>
	<version>1.7.0</version>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<optimize>true</optimize>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArguments>
						<Xmaxwarns>10000</Xmaxwarns>
						<Xmaxerrs>10000</Xmaxerrs>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.3</version>
				<configuration>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.ops4j</groupId>
				<artifactId>maven-pax-plugin</artifactId>
				<version>1.5</version>
				<extensions>true</extensions>
			</plugin>
			<!-- Generates the OSGi metadata based on the osgi.bnd file. -->
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
						<Bundle-Version>${project.version}</Bundle-Version>
						<Private-Package>${bundle.namespace}.*</Private-Package>
						<Bundle-Activator>${bundle.namespace}.CyActivator</Bundle-Activator>
						<Import-Package>*</Import-Package>
						<Embed-Dependency>ci-bridge-impl;inline=true</Embed-Dependency>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <configuration>
                            <target>
                                <!-- Will run build.xml in same folder -->
                                <ant dir="./" />
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
		</plugins>
		
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.ops4j</groupId>
										<artifactId>
											maven-pax-plugin
										</artifactId>
										<versionRange>
											[1.5,)
										</versionRange>
										<goals>
											<goal>compile</goal>
											<goal>testCompile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<!-- Links to the Cytoscape Maven repositories. -->
	<repositories>
		<repository>
			<id>cytoscape_snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
			<name>Cytoscape Snapshots</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>cytoscape_releases</id>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<name>Cytoscape Releases</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
		</repository>
	</repositories>

	<!-- Dependencies needed to compile this project. -->
	<dependencies>
		<!-- OSGI -->
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>4.2.0</version>
		</dependency>
	
		<!-- Cytoscape -->
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>application-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>model-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>viewmodel-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>swing-application-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>session-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>swing-util-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>vizmap-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>service-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>layout-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>command-executor-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>util-api</artifactId>
			<version>${cytoscape.api.version}</version>
		</dependency>
		
		<!-- Commands/Rest -->
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>2.5.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>
		
		<!-- CyREST -->
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>1.5.7</version>
			<scope>provided</scope>
		</dependency>
			<dependency>
			<groupId>org.cytoscape-ci</groupId>
			<artifactId>ci-bridge-impl</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-api</artifactId>
			<version>1.5.2</version>
			<scope>provided</scope>
		</dependency>

		<!-- Unit Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>event-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>model-impl</artifactId>
			<version>${cytoscape.impl.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>model-impl</artifactId>
			<version>${cytoscape.impl.version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>ding-presentation-impl</artifactId>
			<version>${cytoscape.impl.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>ding-presentation-impl</artifactId>
			<version>${cytoscape.impl.version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
